PDE_solver/jitfailure-dolfin_expression_0235577e9ab30f30351f941a699e4536/error.log
/tmp/tmpswsey1la/dolfin_expression_0235577e9ab30f30351f941a699e4536.cpp: In member function ‘virtual void dolfin::dolfin_expression_0235577e9ab30f30351f941a699e4536::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpswsey1la/dolfin_expression_0235577e9ab30f30351f941a699e4536.cpp:62:25: error: no match for ‘operator+’ (operand types are ‘int’ and ‘Eigen::internal::enable_if<true, const Eigen::CwiseBinaryOp<Eigen::internal::scalar_quotient_op<double, double>, const Eigen::CwiseBinaryOp<Eigen::internal::scalar_product_op<double, double>, const Eigen::CwiseNullaryOp<Eigen::internal::scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1> >, const Eigen::Ref<const Eigen::Matrix<double, -1, 1> > >, const Eigen::CwiseNullaryOp<Eigen::internal::scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1> > > >::type’ {aka ‘const Eigen::CwiseBinaryOp<Eigen::internal::scalar_quotient_op<double, double>, const Eigen::CwiseBinaryOp<Eigen::internal::scalar_product_op<double, double>, const Eigen::CwiseNullaryOp<Eigen::internal::scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1> >, const Eigen::Ref<const Eigen::Matrix<double, -1, 1> > >, const Eigen::CwiseNullaryOp<Eigen::internal::scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1> > >’})
           values[0] = 1 + (q / 2 / DOLFIN_PI) * x / ( pow(x[0],2) + pow(x[1],2) );
                       ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
